--- a/src/app/BackEnd/Events/updateeventlist/updateeventlist.component.html
+++ b/src/app/BackEnd/Events/updateeventlist/updateeventlist.component.html
@@ -131,7 +131,7 @@
                             style="width: 122.233px;">{{x.users}}</td >
                         <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="UsersLiked: activate to sort column ascending" class="sorting"
-                            style="width: 122.233px;">{{x.UsersLiked}}</td >
+                            style="width: 122.233px;">{{x.usersLiked}}</td >
                         <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
                             style="width: 92.6833px;">
