--- a/src/app/Components/article/add-article/add-article.component.html
+++ b/src/app/Components/article/add-article/add-article.component.html
@@ -1,6 +1,164 @@
 
 <app-head></app-head>
 <app-header></app-header>
+<br><br><br>
+
+<!-- <form #ss="ngForm">
+
+
+     <label>employeeName</label>
+    <input type="text" name="employeeName" ngModel/>
+    <label>Content</label>
+    <input type="text" name="contentReview" ngModel/> -->
+
+    <!-- <label>Category</label>
+    <select id="key" name="key"  [(ngModel)]="selected">
+        <option *ngFor="let key of keys" [value]="key" >
+            {{categoryReviewEnum[key]}}
+        </option>
+    </select>  -->
+
+    <!-- <label>Classification</label>
+    <select id="key2" name="key2" [(ngModel)]="selected2">
+        <option *ngFor="let key2 of keysclas" [value]="key2" >
+            {{classfReviewEnum[key2]}}
+        </option>
+    </select>  -->
+
+    <!-- <label>TypeReview</label>
+    <select id="key3" name="key3" [(ngModel)]="selected3">
+        <option *ngFor="let key3 of keystype" [value]="key3" >
+            {{typeReviewEnum[key3]}}
+        </option>
+    </select>  -->
+
+
+
+    <!-- <input type="submit" value="save" (click)="addSurvey(ss.value)"/>
+</form>  -->
+
+
+
+
+
+<!doctype html>
+<html lang="en">
+  <head>
+  	<title>Contact Form 03</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!-- <link rel="stylesheet" href="css/style.css"> -->
+
+	</head>
+	<body>
+	<section class="ftco-section">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-6 text-center mb-5">
+					<h2 class="heading-section">Complete the form to add your article! </h2>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-md-12" style="padding:30px;">
+					<div class="wrapper">
+
+
+						<div class="row no-gutters">
+							<div class="col-md-7">
+								<div class="contact-wrap w-100 p-md-5 p-4">
+
+
+									<form  id="contactForm" name="contactForm" class="contactForm" #article="ngForm">
+										<div class="row">
+											<div class="col-md-12" style="margin:20px 0">
+												<div class="form-group">
+													<label class="label" for="title">Title</label>
+													<input type="text" class="form-control"  id="name" name="title" ngModel placeholder="Name">
+												</div>
+											</div>
+
+                      <div class="col-md-12" style="margin:20px 0">
+												<div class="form-group">
+													<label class="label" for="#">Description</label>
+													<textarea name="description" class="form-control" id="message" cols="30" rows="4"  ngModel placeholder="Description"></textarea>
+												</div>
+											</div>
+
+                      <div class="col-md-6" style="margin:20px 0">
+												<div class="form-group">
+													<label class="label" for="#">Date</label>
+                      <input type="Date" name="datecreation" class="form-control" ngModel>
+                    </div>
+                  </div>
+											<div class="col-md-6" style="margin:20px 0">
+												<div class="form-group">
+													<label class="label" for="subject">Category:
+                                                    </label>
+                                                    <select class="form-control" id="key" name="key"  [(ngModel)]="selected">
+                                                      <option *ngFor="let key of keys" [value]="key" >
+                                                          {{categoryArti[key]}}
+                                                      </option>
+                                                  </select>
+												</div>
+											</div>
+
+
+
+											<div class="col-md-12">
+												<div class="form-group" style="display:flex;justify-content:center;margin-top: 10px ">
+                          <input  type="submit" value="save" (click)="addArticle(article.value)">
+
+													<div class="submitting"></div>
+												</div>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+							<div class="col-md-5 d-flex align-items-stretch">
+								<div class="info-wrap w-100 p-5 img" style="background-image: url(../../../../assets/pexels-cottonbro-4065864.jpg);">
+			          </div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+
+	</body>
+</html>
+
+
+<app-footer></app-footer>
+<app-scripts></app-scripts>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+   <app-head></app-head>
+<app-header></app-header>
 <div style="margin: 200px;">
 <p>add-article works!</p>
 <form #article="ngForm" >
@@ -12,8 +170,10 @@
     <input type="text" name="description"  class="form-control" ngModel>
 
     <label>category</label>
+  -->
     <!--<input type="text" name="category" class="form-control"ngModel>-->
-    <select id="key" name="key"  [(ngModel)]="selected">
+    <!--
+         <select id="key" name="key"  [(ngModel)]="selected">
       <option *ngFor="let key of keys" [value]="key" >
           {{categoryArti[key]}}
       </option>
@@ -33,3 +193,7 @@
 </div>
 <app-footer></app-footer>
 <app-scripts></app-scripts>
+
+    -->
+
+-->
