--- a/src/app/Components/offer/show-offer/show-offer.component.css
+++ b/src/app/Components/offer/show-offer/show-offer.component.css
@@ -1,29 +1,241 @@
-@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/fontawesome.min.css';
-.container 
-{
-    display:flex; 
-    flex-direction:row;  
-    width:100%; 
-    margin: 100px auto ; 
-  
-} 
-.left 
-{
-    width:30%; 
-    background-color: aqua; 
-    height:auto; 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-
-} 
-.left .item 
-{
-    padding: 10px;
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/fontawesome.min.css";
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin: 100px auto;
 }
-.right
-{
-    width: 60%; 
-    background-color: red; 
-    height:auto; 
+.right {
+  width: 30%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding-left: 100px;
+}
+.right .item {
+  padding: 10px;
+}
+.item{
+  background-color: #eee;
+  padding: 15px ;
+  border-radius: 5px;
+  box-shadow: 0 2px 15px 0 rgb(27 27 27 / 11%);
+  margin: 15px 0;
+}
+.item:hover {
+  box-shadow: 0 2px 15px 0 rgb(27 27 27 / 20%);
+}
+
+.left {
+  width: 60%;
+  height: auto;
+}
+/*-----*/
+/* dots color */
+/*::ng-deep .owl-theme .owl-dots .owl-dot span {
+  background: #d6d6d6 !important;
+}*/
+/* active and on hover color */
+/*::ng-deep .owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+  background: #1fb79b !important;
+}*/
+/** caroussel ang */
+/*::ng-deep .owl-carousel span {
+    width:10px;
+    height:10px;
+    margin:5px 7px;
+    background: #d6d6d6 !important;
+    display:block;
+    -webkit-backface-visibility:visible;
+    -webkit-transition:opacity 200ms ease;
+    -moz-transition:opacity 200ms ease;
+    -ms-transition:opacity 200ms ease;
+    -o-transition:opacity 200ms ease;
+    transition:opacity 200ms ease;
+    -webkit-border-radius:30px;
+    -moz-border-radius:30px;
+    border-radius:30px;
+}
+::ng-deep .owl-carousel .active span {
+    width:10px;
+    height:10px;
+    margin:5px 7px;
+    background: #1fb79b !important;
+    display:block;
+    -webkit-backface-visibility:visible;
+    -webkit-transition:opacity 200ms ease;
+    -moz-transition:opacity 200ms ease;
+    -ms-transition:opacity 200ms ease;
+    -o-transition:opacity 200ms ease;
+    transition:opacity 200ms ease;
+    -webkit-border-radius:30px;
+    -moz-border-radius:30px;
+    border-radius:30px;
+}
+::ng-deep .owl-stage-outer .ng-star-inserted{
+    width: 100% auto;
+height: 200px;
+  top: 10px;
+  left: calc(50% - 300px);
+  display: flex;
+}
+ ::ng-deep .owl-item .ng-tns-c144-1 .ng-trigger .ng-trigger-autoHeight .cloned .ng-star-inserted{
+    display: flex;
+  height: 250px;
+  width: 250px;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #000;
+  margin-left: 35%;
+  transition: 0.4s ease-out;
+  position: relative;
+  left: -20px;
+ }*/
+
+.containerC {
+  /* height: 200px; */
+  width: 100% auto;
+  top: 60px;
+  left: calc(50% - 300px);
+  display: flex;
+}
+
+.cardC , ::ng-depp .ng-star-inserted{
+  display: flex;
+  height: 250px;
+  /*width: 250px;*/
+  width: 100% auto;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #000;
+  margin-left: 20px;
+  transition: 0.4s ease-out;
+  position: relative;
+  left: -20px;
+}
+
+::ng-deep .owl-stage-outer .ng-star-inserted{
+    height: 250px;
+}
+
+.cardC:not(:first-child) {
+  margin-left: -50px;
+}
+
+.cardC:hover {
+  transform: translateY(-50px);
+  transition: 0.4s ease-out;
+}
+
+.cardC:hover ~ .cardC {
+  position: relative;
+  left: 50px;
+  transition: 0.4s ease-out;
+}
+
+.title {
+  color: black;
+  font-weight: 300;
+  position: absolute;
+  left: 20px;
+  top: 15px;
+}
+
+.bar {
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  height: 5px;
+  width: 150px;
+}
+
+.emptybar {
+  background-color: #2e3033;
+  width: 100%;
+  height: 100%;
+}
+
+.filledbar {
+  position: absolute;
+  top: 0px;
+  z-index: 3;
+  width: 0px;
+  height: 100%;
+  background: rgb(0, 154, 217);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 154, 217, 1) 0%,
+    rgba(217, 147, 0, 1) 65%,
+    rgba(255, 186, 0, 1) 100%
+  );
+  transition: 0.6s ease-out;
+}
+
+.cardC:hover .filledbar {
+  width: 120px;
+  transition: 0.4s ease-out;
+}
+
+.circle {
+  position: absolute;
+  top: 150px;
+  left: calc(50% - 60px);
+}
+
+.stroke {
+  stroke: white;
+  stroke-dasharray: 360;
+  stroke-dashoffset: 360;
+  transition: 0.6s ease-out;
+}
+
+svg {
+  fill: #17141d;
+  stroke-width: 2px;
+}
+
+.cardC:hover .stroke {
+  stroke-dashoffset: 100;
+  transition: 0.6s ease-out;
+}
+
+
+/** coupon file **/
+button {
+  padding: 0.8em 1.8em;
+  border: 0px solid #17c3b2;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  transition: 0.3s;
+  z-index: 1;
+  font-family: inherit;
+  color: #17c3b2;
+}
+
+button::before {
+  content: "";
+  width: 0;
+  height: 300%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  background: #17c3b2;
+  transition: 0.5s ease;
+  display: block;
+  z-index: -1;
+}
+
+button:hover::before {
+  width: 105%;
+}
+
+button:hover {
+  color: #111;
 }
