--- a/src/app/Components/Evenements/evenements/evenements.component.html
+++ b/src/app/Components/Evenements/evenements/evenements.component.html
@@ -88,7 +88,7 @@
                         <div class="single-latest-news">
                                                         <div class="latest-news-img">
                                  <a href="https://demo.themewinter.com/wp/buildbench/blog/2019/03/21/support-development-for-more-experience-3/">
-                                       <img src="/assets/news_full2.jpg" alt="Riding with friend is the best feeling">
+                                       <img src="/assets/Images/Evenements/AddEvent/{{x.coverimage}}" alt="Riding with friend is the best feeling">
                                  </a>         
                               </div>
                               
