--- a/src/app/Components/Evenements/addevenement/addevenement.component.html
+++ b/src/app/Components/Evenements/addevenement/addevenement.component.html
@@ -11,6 +11,7 @@
                           <label class='label required' for='name'>Event Title</label>
                           <input class='text-input' id='name' name='name' required type='text' [(ngModel)]="event.title">
                         </p>
+                       
                         <p class='field required half'>
                           <label class='label' for='email'>Starting Date</label>
                           <input class='text-input' id='email' name='email' required type='date' [(ngModel)]="event.dateStart">
@@ -26,6 +27,10 @@
                         <p class='field half required'>
                           <label class='label' for='password'>Avariable Places </label>
                           <input class='text-input' id='password' name='password' required type='number'[(ngModel)]="event.npDisponible">
+                        </p>
+                        <p class='field required'>
+                          <label class='label'>Event Images</label>
+                          <input class='text-input' id='eventimages' name='eventimages' required type='file' [(ngModel)]="event.coverimage" multiple="multiple">
                         </p>
                         <div class='field'>
                           <label class='label'>Event Type?</label>
@@ -57,7 +62,7 @@
                           <label class='label' for='about'>Event Description</label>
                           <textarea class='textarea' cols='50' id='about' name='description' rows='4' [(ngModel)]="event.description"></textarea>
                         </p>
-                      
+                        
                         <p class='field half'>
                           <input class='button' type='submit' value='Add Event' style="background-color: #1fb79b;">
                         </p>
