--- a/src/app/BackEnd/badges/show-user-badges/show-user-badges.component.html
+++ b/src/app/BackEnd/badges/show-user-badges/show-user-badges.component.html
@@ -50,23 +50,14 @@
                             colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
                             style="width: 162.917px;">Title</th>
                         <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateStart: activate to sort column ascending" class="sorting"
-                            style="width: 144.667px;">Cost</th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">Description</th>
-                        
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
-                            style="width: 92.6833px;">Update</th>
-                            <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
-                            style="width: 92.6833px;">Delete</th>
+                            style="width: 92.6833px;">Manage</th>
+                       
                     </tr>
                 </thead>
                 
                 <tbody _ngcontent-nwj-c61="">
-                    <tr _ngcontent-nwj-c61="" role="row" *ngFor="let x of listevenements | filter: filterTerm;">
+                    <tr _ngcontent-nwj-c61="" role="row" *ngFor="let x of listuserbadges | filter: filterTerm;">
                         <td _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" data-col="0" aria-label=""
                             class="dt-checkboxes-cell dt-checkboxes-select-all sorting_disabled"
@@ -75,33 +66,36 @@
                             colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
                             style="width: 162.917px;">{{x.title}}</td >
                         <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateStart: activate to sort column ascending" class="sorting"
-                            style="width: 144.667px;">{{x.cost}}</td >
-                        <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">{{x.description}}</td >
-                        <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
                             style="width: 92.6833px;">
-                            <button class="btn btn-warning" [routerLink]="['/Dashboard/UpdateBadge',x.id]"><i class="feather icon-edit d-flex justify-content-center"></i></button>
+                            <button class="btn btn-danger" (click)="Remove(x.id)"><i class="feather icon-trash d-flex justify-content-center"></i></button>
                              </td >
-                             <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                             colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
-                             style="width: 92.6833px;">
-                           
-                        <button class="btn btn-danger" (click)="delete(x.id)"><i class="feather icon-trash d-flex justify-content-center"></i></button>
-                              </td >
                    
                     </tr>
                    
                 </tbody>
             </table>
+           
             <div _ngcontent-nwj-c61="" class="bottom">
                 <div _ngcontent-nwj-c61="" class="actions"></div>
             </div>
+            
         </div>
+        
     </div>
+    
 </section>
-  
+
+<button class="btn btn-success col-lg-1" (click)="Show(!show)"><i class="feather icon-plus-square d-flex justify-content-center"></i></button>
+<div *ngIf="show">
+    <p>Note: User Must have Enought Points to affect </p><div class="row">
+        
+    <select>
+        <option *ngFor="let x of listbadges| filter: filterTerm;" (click)="SelectBadge(x.id)">{{x.title}} (Costs {{x.cost}}) Points</option>
+    </select>
+    <button class="btn btn-success col-lg-1" (click)="Affect()"><i class="feather icon-check-circle d-flex justify-content-center"></i></button>
+    </div>
+</div>
+
 </div>
 </div>
