--- a/src/app/BackEnd/management/management.component.html
+++ b/src/app/BackEnd/management/management.component.html
@@ -97,12 +97,9 @@
         </li>
         <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-settings"></i><span class="menu-title" data-i18n="Charts">Features</span><span class="badge badge badge-pill badge-warning float-right mr-2">Hot</span></a>
             <ul class="menu-content">
-                <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-terminal"></i><span class="menu-title" >Affect BadgeUser</span></a>
+                <li class=" nav-item"><a [routerLink]="['/Dashboard/UserBadges']"><i class="feather icon-terminal"></i><span class="menu-title" >UserBadges</span></a>
                 </li>
-                <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-trash"></i><span class="menu-title" >Delete BadgeUser</span></a>
-                </li>
-                <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-info"></i><span class="menu-title" >Show User's Badges</span></a>
-                </li>
+               
                 <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-tag"></i><span class="menu-title" >Coupon</span></a>
                 </li>
             </ul>
@@ -130,8 +127,6 @@
                 <li><a [routerLink]="['/Dashboard/AddEvent']"><i class="feather icon-plus-circle"></i><span class="menu-item" data-i18n="Apex">Add Event</span></a>
                 </li>
                 <li ><a href="javascript(void);" [routerLink]="['/Dashboard/UpdateEventList']"><i class="feather icon-refresh-ccw"></i><span class="menu-item" data-i18n="Chartjs">Update Event</span></a>
-                </li>
-                <li><a href="javascript(void);"  [routerLink]="['/Dashboard/DeleteEventList']"><i class="feather icon-trash"></i><span class="menu-item" data-i18n="Echarts">Delete Event</span></a>
                 </li>
             </ul>
         </li>
