--- a/src/app/Components/review/addreviewet-affecter-s/addreviewet-affecter-s.component.html
+++ b/src/app/Components/review/addreviewet-affecter-s/addreviewet-affecter-s.component.html
@@ -117,7 +117,7 @@
 											</div>
 											<div class="col-md-12">
 												<div class="form-group" style="display:flex;justify-content:center;margin-top: 10px ">
-                                                    <input type="submit"  style="margin: 0 auto; " value="Add your review " class="btn btn-primary" (click)="addSurvey(ss.value)"/> 
+                                                    <input type="submit"  style="margin: 0 auto; " value="Add your review " class="btn btn-primary" (click)="addReview(ss.value)"/> 
 												
 													<div class="submitting"></div>
 												</div>
