--- a/src/app/BackEnd/management/management.component.html
+++ b/src/app/BackEnd/management/management.component.html
@@ -132,11 +132,7 @@
         </li>
         <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-settings"></i><span class="menu-title" data-i18n="Charts">Features</span><span class="badge badge badge-pill badge-warning float-right mr-2">Hot</span></a>
             <ul class="menu-content">
-                <li class=" nav-item"><a href="chart-apex.html"><i class="feather icon-plus-square"></i><span class="menu-item" data-i18n="Apex">Affect UserEvent</span></a>
-                </li>
-                <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-trash"></i><span class="menu-title" data-i18n="Form Wizard">Delete UserEvent</span></a>
-                </li>
-                <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-user-plus"></i><span class="menu-title" data-i18n="Form Wizard">User Joined Events</span></a>
+                <li class=" nav-item"><a [routerLink]="['/Dashboard/UserEvents']"><i class="feather icon-plus-square"></i><span class="menu-item" data-i18n="Apex">UserEvents</span></a>
                 </li>
                 <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-heart"></i><span class="menu-title" data-i18n="Form Wizard">User Liked Events</span></a>
                 </li>
