--- a/src/app/BackEnd/Events/users-events/users-events.component.html
+++ b/src/app/BackEnd/Events/users-events/users-events.component.html
@@ -48,7 +48,19 @@
                             style="width: 52.65px;"><input _ngcontent-nwj-c61="" type="checkbox"></th>
                         <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
-                            style="width: 162.917px;">Title</th>
+                            style="width: 162.917px;">FirstName</th>
+                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
+                            colspan="1" aria-label="dateStart: activate to sort column ascending" class="sorting"
+                            style="width: 144.667px;">Name</th>
+                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
+                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
+                            style="width: 169.017px;">EmailAddress</th>
+                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
+                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
+                            style="width: 169.017px;">UserName</th>
+                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
+                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
+                            style="width: 169.017px;">PhoneNumber</th>
                         <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
                             style="width: 92.6833px;">Manage</th>
@@ -57,45 +69,42 @@
                 </thead>
                 
                 <tbody _ngcontent-nwj-c61="">
-                    <tr _ngcontent-nwj-c61="" role="row" *ngFor="let x of listuserbadges | filter: filterTerm;">
+                    <tr _ngcontent-nwj-c61="" role="row" *ngFor="let x of listusers | filter: filterTerm;">
                         <td _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" data-col="0" aria-label=""
                             class="dt-checkboxes-cell dt-checkboxes-select-all sorting_disabled"
                             style="width: 52.65px;"><input _ngcontent-nwj-c61="" type="checkbox"></td>
                         <td _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
-                            style="width: 162.917px;">{{x.title}}</td >
+                            style="width: 162.917px;">{{x.firstname}}</td >
+                        <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
+                            colspan="1" aria-label="dateStart: activate to sort column ascending" class="sorting"
+                            style="width: 144.667px;">{{x.name}}</td >
+                        <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
+                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
+                            style="width: 169.017px;">{{x.emailAddress}}</td >
+                            <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
+                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
+                            style="width: 169.017px;">{{x.username}}</td >
+                            <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
+                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
+                            style="width: 169.017px;">{{x.phoneNumber}}</td >
                         <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
                             style="width: 92.6833px;">
-                            <button class="btn btn-danger" (click)="Remove(x.id)"><i class="feather icon-trash d-flex justify-content-center"></i></button>
+                            <button class="btn btn-warning" [routerLink]="['/Dashboard/ShowUserEvents',x.idUser]"><i class="feather icon-settings d-flex justify-content-center"></i></button>
                              </td >
                    
                     </tr>
                    
                 </tbody>
             </table>
-           
             <div _ngcontent-nwj-c61="" class="bottom">
                 <div _ngcontent-nwj-c61="" class="actions"></div>
             </div>
-            
         </div>
-        
     </div>
-    
 </section>
-
-<button class="btn btn-success col-lg-1" (click)="Show(!show)"><i class="feather icon-plus-square d-flex justify-content-center"></i></button>
-<div *ngIf="show" class="select">
-    <p>Note: User Must have Enought Points to affect </p><div class="row">
-        
-    <select>
-        <option *ngFor="let x of listbadges| filter: filterTerm;" (click)="SelectBadge(x.id)">{{x.title}} (Costs {{x.cost}}) Points</option>
-    </select>
-    <button class="btn btn-success col-lg-1" (click)="Affect()"><i class="feather icon-check-circle d-flex justify-content-center"></i></button>
-    </div>
-</div>
-
+  
 </div>
 </div>
